syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "HelloWorldProto";

package com.xudashu.helloworld;

// The greeting service definition.
service Greeter {
    // Sends a greeting
    rpc SayHello (SayHelloRequest) returns (SayHelloResponse) {}
}

// The request message containing the user's name.
message SayHelloRequest {
    string name = 1;
}

// The response message containing the greetings
message SayHelloResponse {
    string message = 1;
}